crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-kitchensink/error.txt
Found 1 error:

Invariant: Expected a variable declaration

Got ExpressionStatement.

error.todo-kitchensink.ts:20:2
  18 |   const j = function bar([quz, qux], ...args) {};
  19 |
> 20 |   for (; i < 3; i += 1) {
     |   ^^^^^^^^^^^^^^^^^^^^^^^
> 21 |     x.push(i);
     | ^^^^^^^^^^^^^^
> 22 |   }
     | ^^^^ Expected a variable declaration
  23 |   for (; i < 3; ) {
  24 |     break;
  25 |   }
